--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,20 +40,18 @@ jobs:
           tag=$(git describe --tags --abbrev=0)
           tag_no_v=$(echo $tag | sed 's/v//g')
           release_name="cli-$tag-${{ matrix.target }}"
-
           # Build everything
-          dotnet publish src/AzAcme.Cli/AzAcme.Cli.csproj -p:PublishSingleFile=true --runtime "${{ matrix.target }}" -c Release -o "$release_name" --self-contained true -p:EnableCompressionInSingleFile=true -p:PublishTrimmed=true /p:Version="$tag_no_v"
-
+          dotnet publish src/AzAcme.Cli/AzAcme.Cli.csproj -p:PublishSingleFile=true --runtime "${{ matrix.target }}" -c Release -o "$release_name" --self-contained true -p:EnableCompressionInSingleFile=true -p:PublishTrimmed=true -p:Version="$tag_no_v"
           # Pack files
           if [ "${{ matrix.target }}" == "win-x64" ]; then
             # Pack to zip for Windows
             7z a -tzip "${release_name}.zip" "./${release_name}/*"
           else
-          tar czvf "${release_name}.tar.gz" "$release_name"
+            tar czvf "${release_name}.tar.gz" "$release_name"
           fi
-
           # Delete output directory
           rm -r "$release_name"
+
 
       - name: Publish
         uses: softprops/action-gh-release@v1
