--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,8 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['linux', 'windows', 'macOS']
+        # kind: ['linux', 'windows', 'macOS'] ######## put it back at some point
+        kind: ['windows']
         include:
           - kind: linux
             os: ubuntu-latest
@@ -25,6 +26,9 @@ jobs:
             os: macos-latest
             target: osx-x64
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -49,7 +53,7 @@ jobs:
             # Pack to zip for Windows
             7z a -tzip "${release_name}.zip" "./${release_name}/*"
           else
-          tar czvf "${release_name}.tar.gz" "$release_name"
+            tar czvf "${release_name}.tar.gz" "$release_name"
           fi
 
           # Delete output directory
